--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
 .App-header {
   background-color: #282c34;
   height: 70px;
@@ -18,16 +13,40 @@
   color: white;
   padding: 20px;
 }
-
-.App-link {
-  color: #61dafb;
+.App-logo {
+  animation: App-logo-spin infinite 20s linear;
+  height: 80px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App-intro {
+  font-size: large;
+}
+ 
+/* new css for movie component */
+* {
+  box-sizing: border-box;
+}
+ 
+.movies {
+  display: flex;
+  flex-wrap: wrap;
+}
+ 
+.App-header h2 {
+  margin: 0;
+}
+ 
+.add-movies {
+  text-align: center;
+}
+ 
+.add-movies button {
+  font-size: 16px;
+  padding: 8px;
+  margin: 0 10px 30px 10px;
+}
+ 
+.movie {
+  padding: 5px 25px 10px 25px;
+  max-width: 25%;
 }
