Add the movies array to the App.js component state and make the styling a bit responsive

--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,7 @@
 .movies {
   display: flex;
   flex-wrap: wrap;
+  flex-direction: row;
 }
  
 .App-header h2 {
@@ -49,4 +50,23 @@
 .movie {
   padding: 5px 25px 10px 25px;
   max-width: 25%;
+}
+
+@media screen and (min-width: 694px) and (max-width: 915px) {
+  .movie{
+    max-width: 33%;
+  }
+}
+
+@media screen and (min-width: 652px) and (max-width: 693px) {
+  .movie{
+    max-width: 50%;
+  }
+}
+
+@media screen and (max-width: 651px) {
+  .movie{
+    max-width: 100%;
+    margin: auto;
+  }
 }
